--- a/templates/manage-appointments.html
+++ b/templates/manage-appointments.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Family Doctor: Manage Appointment</title>
-  <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link rel="stylesheet" href="css/styles.css" />
-</head>
-
-<style>
+{% extends 'base.html' %}
+{% block style %}
   .card-margin {
       margin-bottom: 1.875rem;
   }
@@ -347,9 +334,9 @@
       outline: 0;
       box-shadow: none
   }
-</style>
+  {% endblock style %}
 
-<body>
+{% block content %}
 
 
     <div class="container mt-5">
@@ -478,6 +465,4 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 
-</body>
-
-</html>
+  {% endblock content %}
