--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Family Doctor</title>
+  <title>{{title}}</title>
   <!-- Bootstrap core CSS -->
   <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -27,7 +27,7 @@
   ">
     
     <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
-        <div class="container"><a class="navbar-brand" href="#">Family Doctor X</a>
+        <div class="container"><a class="navbar-brand" href="{% url 'home' %}">Family Doctor X</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="navbar-toggler-icon"></span>
@@ -55,17 +55,15 @@
                 
                   
                   <li class="nav-item" role="presentation">
-                    <a href="manage-appointments.html" style="float: left;cursor:pointer;" aria-expanded="true" title="You Have 6 New Appointments">
+                    <a href="{% url 'manage' %} " style="float: left;cursor:pointer;" aria-expanded="true" title="You Have 6 New Appointments">
                       <i class="far fa-bell" style="font-size: 20px; float: left; color: black">
                       </i>
                   </a>
-                  <span class="badge badge-danger">6</span>
+                  <span class="badge badge-danger">{{count}}</span>
                 </li>
                 {% endif %}
                   
-                    <!-- <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Dropdown </a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
-                    </li> -->
+                  
                 </ul>
             </div>
         </div>
